--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pinia": "^2.3.0",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
+    "vue-i18n": "^9.14.2",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
