--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
     "vue-i18n": "^9.14.2",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
