--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "vue": "^3.4.18",
     "vue-i18n": "^9.14.2",
     "vue-router": "^4.0.0",
-    "vuedraggable": "^4.1.0"
+    "vuedraggable": "^4.1.0",
+    "chart.js": "^3.9.1",
+    "vue-chart-3": "^3.1.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
