--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,9 +2,9 @@ name: Frontend CI/CD
 
 on:
   push:
-    branches: [ main ]
+    branches: [main, develop] # Додаємо develop
   pull_request:
-    branches: [ main ]
+    branches: [main, develop]
 
 jobs:
   build-and-push:
@@ -19,9 +19,21 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
+      # Визначаємо тег залежно від гілки
+      - name: Determine Docker tag
+        id: tag
+        run: |
+          if [[ ${{ github.ref }} == 'refs/heads/main' ]]; then
+            echo "tag=latest" >> $GITHUB_OUTPUT
+          elif [[ ${{ github.ref }} == 'refs/heads/develop' ]]; then
+            echo "tag=develop" >> $GITHUB_OUTPUT
+          else
+            echo "tag=pr-${{ github.event.number }}" >> $GITHUB_OUTPUT
+          fi
+
       - name: Build and push frontend
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/crm_frontend:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/crm_frontend:${{ steps.tag.outputs.tag }}
