--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,7 +2,7 @@ name: Frontend CI/CD
 
 on:
   push:
-    branches: [main, develop] # Додаємо develop
+    branches: [main, develop]
   pull_request:
     branches: [main, develop]
 
@@ -19,33 +19,60 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-      # Визначаємо тег залежно від гілки
-      - name: Determine Docker tag
-        id: tag
+      # Визначаємо параметри збірки
+      - name: Determine build parameters
+        id: params
         run: |
           if [[ ${{ github.ref }} == 'refs/heads/main' ]]; then
             echo "tag=latest" >> $GITHUB_OUTPUT
+            echo "target=production" >> $GITHUB_OUTPUT
+            echo "environment=production" >> $GITHUB_OUTPUT
           elif [[ ${{ github.ref }} == 'refs/heads/develop' ]]; then
             echo "tag=develop" >> $GITHUB_OUTPUT
+            echo "target=development" >> $GITHUB_OUTPUT
+            echo "environment=development" >> $GITHUB_OUTPUT
           else
             echo "tag=pr-${{ github.event.number }}" >> $GITHUB_OUTPUT
+            echo "target=development" >> $GITHUB_OUTPUT
+            echo "environment=development" >> $GITHUB_OUTPUT
           fi
 
-      # Визначаємо режим збірки
-      - name: Determine build mode
-        id: build
-        run: |
-          if [[ ${{ steps.tag.outputs.tag }} == 'latest' ]]; then
-            echo "mode=production" >> $GITHUB_OUTPUT
-          else
-            echo "mode=development" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Build and push frontend
+      # Збірка для production (nginx-based, маленький образ)
+      - name: Build and push production image
+        if: steps.params.outputs.target == 'production'
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/crm_frontend:${{ steps.tag.outputs.tag }}
-          build-args: |
-            BUILD_MODE=${{ steps.build.outputs.mode }}
+          target: production
+          tags: |
+            ${{ secrets.DOCKER_HUB_USERNAME }}/crm_frontend:${{ steps.params.outputs.tag }}
+            ${{ secrets.DOCKER_HUB_USERNAME }}/crm_frontend:prod-${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      # Збірка для development (Node.js-based, великий образ)
+      - name: Build and push development image
+        if: steps.params.outputs.target == 'development'
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          target: development
+          tags: |
+            ${{ secrets.DOCKER_HUB_USERNAME }}/crm_frontend:${{ steps.params.outputs.tag }}
+            ${{ secrets.DOCKER_HUB_USERNAME }}/crm_frontend:dev-${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      # Виводимо інформацію про створений образ
+      - name: Image info
+        run: |
+          echo "🚀 Built image: ${{ secrets.DOCKER_HUB_USERNAME }}/crm_frontend:${{ steps.params.outputs.tag }}"
+          echo "🎯 Target stage: ${{ steps.params.outputs.target }}"
+          echo "🌍 Environment: ${{ steps.params.outputs.environment }}"
+          if [[ "${{ steps.params.outputs.target }}" == "production" ]]; then
+            echo "📦 Production image: nginx + static files (~25MB)"
+          else
+            echo "📦 Development image: Node.js + full code (~800MB)"
+          fi
