--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue-router": "^4.0.0",
     "vuedraggable": "^4.1.0",
     "chart.js": "^3.9.1",
-    "vue-chart-3": "^3.1.8"
+    "vue-chart-3": "^3.1.8",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
